server/crates/djinn-mcp-extension/src/tests/snapshots/djinn_mcp_extension__tests__schema_tests__adversary_tool_schemas.snap
---
source: crates/djinn-mcp-extension/src/tests/schema_tests.rs
expression: tool_schemas_adversary()
---
[
  {
    "name": "task_show",
    "description": "Show details of a work item including recent activity and blockers.",
    "inputSchema": {
      "type": "object",
      "required": [
        "id"
      ],
      "properties": {
        "id": {
          "type": "string",
          "description": "Task UUID or short ID"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "task_list",
    "description": "List tasks with optional filters and pagination.",
    "inputSchema": {
      "type": "object",
      "properties": {
        "status": {
          "type": "string"
        },
        "issue_type": {
          "type": "string"
        },
        "priority": {
          "type": "integer"
        },
        "text": {
          "type": "string",
          "description": "Free-text search in title/description"
        },
        "label": {
          "type": "string"
        },
        "parent": {
          "type": "string",
          "description": "Epic ID to filter by"
        },
        "sort": {
          "type": "string"
        },
        "limit": {
          "type": "integer"
        },
        "offset": {
          "type": "integer"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "task_activity_list",
    "description": "Query a task's activity log with optional filters. Returns comments, status transitions, and other events. Use to inspect Lead guidance, reviewer feedback, or history.",
    "inputSchema": {
      "type": "object",
      "required": [
        "id"
      ],
      "properties": {
        "id": {
          "type": "string",
          "description": "Task UUID or short ID"
        },
        "event_type": {
          "type": "string",
          "description": "Filter by event type: comment, status_changed, commands_run, merge_conflict, task_review_start"
        },
        "actor_role": {
          "type": "string",
          "description": "Filter by actor: lead, reviewer, worker, system"
        },
        "limit": {
          "type": "integer",
          "description": "Max entries to return (default 30, max 50)"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "memory_read",
    "description": "Read a note by permalink or title.",
    "inputSchema": {
      "type": "object",
      "required": [
        "identifier"
      ],
      "properties": {
        "identifier": {
          "type": "string",
          "description": "Permalink or title"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "memory_search",
    "description": "Search notes and proposals in project memory. Returns a unified result set interleaved by relevance.",
    "inputSchema": {
      "type": "object",
      "required": [
        "query"
      ],
      "properties": {
        "query": {
          "type": "string"
        },
        "folder": {
          "type": "string"
        },
        "type": {
          "type": "string"
        },
        "task_id": {
          "type": "string",
          "description": "Task ID for affinity scoring; defaults to the current session task"
        },
        "limit": {
          "type": "integer"
        },
        "edge_kinds": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "Optional list of edge kinds to include in graph traversal scoring. When provided, only edges whose kind matches one of these values participate in spreading activation. Omit to use all edge kinds."
        },
        "entity_types": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "Optional entity-type filter. Omit to return both notes and proposals (default). [\"note\"] for notes-only. [\"proposal\"] for proposals-only."
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "memory_list",
    "description": "List notes in project memory. Returns compact summaries without full content.",
    "inputSchema": {
      "type": "object",
      "properties": {
        "folder": {
          "type": "string",
          "description": "Filter by folder (e.g. \"decisions\")"
        },
        "type": {
          "type": "string",
          "description": "Filter by note type (e.g. \"adr\", \"reference\", \"research\")"
        },
        "status": {
          "type": "string",
          "description": "Explicit lifecycle status filter. Defaults to active; use archived or deprecated to list non-live notes."
        },
        "depth": {
          "type": "integer",
          "description": "Depth control: 0 = unlimited, 1 = exact folder (default), N = N levels"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "shell",
    "description": "Execute shell commands in the task worktree. Commands always run from the worktree root.",
    "inputSchema": {
      "type": "object",
      "required": [
        "command"
      ],
      "properties": {
        "command": {
          "type": "string",
          "description": "Shell command to execute"
        },
        "timeout_ms": {
          "type": "integer",
          "description": "Timeout in milliseconds (default 120000)"
        }
      }
    },
    "readOnly": false,
    "destructive": true,
    "idempotent": false,
    "openWorld": false,
    "concurrent_safe": false
  },
  {
    "name": "read",
    "description": "Read a file with line numbers and pagination. Rejects binary files. Pass `project` (UUID or owner/repo slug) to read a file from ANOTHER registered repo — served read-only from its default branch (no checkout); omit it to read your task worktree.",
    "inputSchema": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "offset": {
          "type": "integer",
          "minimum": 0
        },
        "limit": {
          "type": "integer",
          "minimum": 1
        },
        "project": {
          "type": "string",
          "description": "Other registered project to read from (UUID or owner/repo slug). Omit for your own task repo."
        }
      },
      "required": [
        "file_path"
      ]
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "code_search",
    "description": "Search code across registered repos with `git grep` (basic regex). Pass `project` (UUID or owner/repo slug) to search one repo, or omit it (or pass \"*\") to search ALL registered projects at once — e.g. find every caller of a gRPC service org-wide. Served from each repo's default branch (no checkout). For your own task repo's working tree (your uncommitted changes), use shell grep instead.",
    "inputSchema": {
      "type": "object",
      "required": [
        "query"
      ],
      "properties": {
        "query": {
          "type": "string",
          "description": "Pattern (basic regex, like git grep)"
        },
        "project": {
          "type": "string",
          "description": "Limit to one project (UUID or owner/repo slug). Omit or \"*\" = all registered projects."
        },
        "path": {
          "type": "string",
          "description": "Optional pathspec to scope the search (e.g. crates/ or *.rs)"
        },
        "ignore_case": {
          "type": "boolean",
          "description": "Case-insensitive match"
        },
        "max_results": {
          "type": "integer",
          "description": "Max hits per project (default 100)"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": true,
    "concurrent_safe": true
  },
  {
    "name": "skill_read",
    "description": "Load the full content of an assigned skill by name. Under progressive skill disclosure the system prompt lists each non-required skill's name and description only; call this to fetch the complete skill body on demand. Errors if the name is not an assigned skill.",
    "inputSchema": {
      "type": "object",
      "required": [
        "name"
      ],
      "properties": {
        "name": {
          "type": "string",
          "description": "Name of the skill to load (as shown in the Available Skills section)"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "lsp",
    "description": "Query the Language Server Protocol for code navigation. Operations: hover (type info at position), definition (go to definition), references (find all references), symbols (list document symbols with optional depth/kind/name filtering). Line and character are 1-based for non-symbol operations.",
    "inputSchema": {
      "type": "object",
      "required": [
        "operation",
        "file_path"
      ],
      "properties": {
        "operation": {
          "type": "string",
          "enum": [
            "hover",
            "definition",
            "references",
            "symbols"
          ],
          "description": "LSP operation to perform"
        },
        "file_path": {
          "type": "string",
          "description": "Absolute or worktree-relative file path"
        },
        "line": {
          "type": "integer",
          "minimum": 1,
          "description": "1-based line number (required for hover, definition, references)"
        },
        "character": {
          "type": "integer",
          "minimum": 1,
          "description": "1-based column number (required for hover, definition, references when symbol is omitted)"
        },
        "symbol": {
          "type": "string",
          "description": "Optional symbol name path for hover, definition, or references as an alternative to line+character"
        },
        "depth": {
          "type": "integer",
          "minimum": 0,
          "description": "Maximum nesting depth for operation='symbols'. 0 = top-level only; omitted = unlimited"
        },
        "kind": {
          "type": "string",
          "description": "Comma-separated symbol kind filter for operation='symbols' (e.g. function,method,struct,class,interface,enum,variable,constant,module,field,property,constructor,type_parameter)"
        },
        "name_filter": {
          "type": "string",
          "description": "Case-insensitive substring filter applied to symbol names and name paths for operation='symbols'"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "ci_job_log",
    "description": "Fetch the full log for a GitHub Actions CI job. When CI fails, the activity log tells you the job_id. Call this tool to see the actual error output. Optionally filter to a specific failed step name. If the output is large, use output_view or output_grep to navigate it.",
    "inputSchema": {
      "type": "object",
      "required": [
        "job_id"
      ],
      "properties": {
        "job_id": {
          "type": "integer",
          "description": "The GitHub Actions job ID from the CI failure activity"
        },
        "step": {
          "type": "string",
          "description": "Optional step name to filter the log to (e.g. 'Tests')"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "github_search",
    "description": "Search GitHub code across public repositories using the GitHub Code Search API. Returns compact, navigable matches with snippets, file paths, URLs, and metadata. Each result has a result_id for reference. Use github_fetch_file to inspect the full file of a promising result.",
    "inputSchema": {
      "type": "object",
      "required": [
        "query"
      ],
      "properties": {
        "query": {
          "type": "string",
          "description": "Search query. Supports GitHub code search syntax."
        },
        "language": {
          "type": "string",
          "description": "Programming language filter (e.g. \"Rust\", \"Python\", \"TypeScript\")"
        },
        "repo": {
          "type": "string",
          "description": "Repository filter in \"owner/repo\" format (e.g. \"tokio-rs/tokio\")"
        },
        "path": {
          "type": "string",
          "description": "Path filter to search within specific directories (e.g. \"src/\")"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": true,
    "concurrent_safe": true
  },
  {
    "name": "output_view",
    "description": "Paginated view of a truncated tool output. When a tool result was truncated, the full output is stashed and can be browsed here by tool_use_id.",
    "inputSchema": {
      "type": "object",
      "required": [
        "tool_use_id"
      ],
      "properties": {
        "tool_use_id": {
          "type": "string",
          "description": "The tool_use_id from the truncated result"
        },
        "offset": {
          "type": "integer",
          "minimum": 0,
          "description": "Line offset (0-based, default 0)"
        },
        "limit": {
          "type": "integer",
          "minimum": 1,
          "description": "Number of lines to return (default 200)"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "output_grep",
    "description": "Regex search within a truncated tool output. Returns matching lines with context from the full stashed output.",
    "inputSchema": {
      "type": "object",
      "required": [
        "tool_use_id",
        "pattern"
      ],
      "properties": {
        "tool_use_id": {
          "type": "string",
          "description": "The tool_use_id from the truncated result"
        },
        "pattern": {
          "type": "string",
          "description": "Regex pattern to search for"
        },
        "context_lines": {
          "type": "integer",
          "minimum": 0,
          "description": "Lines of context around each match (default 3)"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "memory_build_context",
    "description": "Build a curated memory context pack for a task or query by combining note retrieval and ranking. Relevant proposals are surfaced alongside notes so a planner/worker sees the motivating proposal.",
    "inputSchema": {
      "type": "object",
      "properties": {
        "task_id": {
          "type": "string",
          "description": "Task ID to gather related memory for; defaults to current session task when omitted"
        },
        "query": {
          "type": "string",
          "description": "Optional free-text query to bias retrieval"
        },
        "limit": {
          "type": "integer",
          "description": "Maximum notes to include (default 8)"
        },
        "min_confidence": {
          "type": "number",
          "description": "Minimum confidence threshold for related notes (default 0.1). Notes below this are excluded."
        },
        "edge_kinds": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "description": "Optional list of edge kinds to include in graph traversal scoring. When provided, only edges whose kind matches one of these values participate in spreading activation. Omit to use all edge kinds."
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "proposal_show",
    "description": "Show a graduated proposal's spec for decomposition (Planner Mode D): title, body, status, acceptance_criteria, and targets (each with project slug + role of `primary`/`reference`). Use this first when dispatched on an `epic_breakdown` task.",
    "inputSchema": {
      "type": "object",
      "required": [
        "id"
      ],
      "properties": {
        "id": {
          "type": "string",
          "description": "Proposal UUID or short ID"
        }
      }
    },
    "readOnly": true,
    "destructive": false,
    "idempotent": true,
    "openWorld": false,
    "concurrent_safe": true
  },
  {
    "name": "task_comment_add",
    "description": "Add a comment or strategic observation to a task's activity log.",
    "inputSchema": {
      "type": "object",
      "required": [
        "id",
        "body"
      ],
      "properties": {
        "id": {
          "type": "string",
          "description": "Task UUID or short ID"
        },
        "body": {
          "type": "string",
          "description": "Comment body to add to the activity log"
        }
      }
    },
    "readOnly": false,
    "destructive": false,
    "idempotent": false,
    "openWorld": false,
    "concurrent_safe": false
  },
  {
    "name": "submit_review",
    "description": "Submit the task review outcome with per-criterion AC verdicts. This atomically sets acceptance criteria met/unmet state on the task. Your session ends after this call.",
    "inputSchema": {
      "type": "object",
      "required": [
        "task_id",
        "verdict"
      ],
      "properties": {
        "task_id": {
          "type": "string",
          "description": "Task UUID or short_id"
        },
        "verdict": {
          "type": "string",
          "enum": [
            "approved",
            "rejected"
          ],
          "description": "Overall review verdict"
        },
        "acceptance_criteria": {
          "type": "array",
          "description": "Per-criterion verdicts that atomically set AC met/unmet state on the task",
          "items": {
            "type": "object",
            "required": [
              "criterion",
              "met"
            ],
            "properties": {
              "criterion": {
                "type": "string",
                "description": "Text of the criterion"
              },
              "met": {
                "type": "boolean",
                "description": "Whether this criterion is met"
              }
            }
          }
        },
        "feedback": {
          "type": "string",
          "description": "Feedback or rejection reason for the worker"
        }
      }
    },
    "readOnly": false,
    "destructive": false,
    "idempotent": false,
    "openWorld": false,
    "concurrent_safe": false
  }
]
