server/crates/djinn-mcp-extension/src/tests/snapshots/djinn_mcp_extension__tests__schema_tests__advocate_tool_names.snap
---
source: crates/djinn-mcp-extension/src/tests/schema_tests.rs
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "shell",
  "read",
  "code_search",
  "skill_read",
  "lsp",
  "ci_job_log",
  "ci_artifact",
  "github_search",
  "output_view",
  "output_grep",
  "output_list",
  "write",
  "edit",
  "memory_build_context",
  "memory_write",
  "memory_edit",
  "proposal_show",
  "proposal_debate_list",
  "proposal_debate_append",
  "proposal_feedback_disposition",
  "proposal_update",
  "proposal_ac_set",
  "proposal_block_patch",
  "get_block_catalog",
  "proposal_blocks",
  "submit_work"
]
