server/crates/djinn-mcp-extension/src/tests/snapshots/djinn_mcp_extension__tests__schema_tests__evidence_spike_tool_names.snap
---
source: crates/djinn-mcp-extension/src/tests/schema_tests.rs
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "read",
  "code_search",
  "skill_read",
  "lsp",
  "ci_job_log",
  "ci_artifact",
  "github_search",
  "output_view",
  "output_grep",
  "output_list",
  "code_graph",
  "pr_review_context",
  "task_blocked_list",
  "epic_show",
  "epic_tasks",
  "memory_build_context",
  "memory_health",
  "memory_extracted_audit",
  "memory_broken_links",
  "memory_orphans",
  "proposal_show",
  "proposal_debate_list",
  "evidence_plan",
  "evidence_exec",
  "submit_work"
]
