server/crates/djinn-mcp-extension/src/tests/snapshots/djinn_mcp_extension__tests__schema_tests__judge_tool_names.snap
---
source: crates/djinn-mcp-extension/src/tests/schema_tests.rs
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "shell",
  "read",
  "code_search",
  "skill_read",
  "lsp",
  "ci_job_log",
  "ci_artifact",
  "github_search",
  "output_view",
  "output_grep",
  "output_list",
  "memory_build_context",
  "proposal_show",
  "proposal_debate_list",
  "proposal_debate_resolve",
  "proposal_debate_append",
  "proposal_refinement_demand_evidence",
  "proposal_refinement_retry_evidence",
  "proposal_refinement_resolve_evidence",
  "proposal_refinement_withdraw_evidence",
  "task_comment_add",
  "submit_decision"
]
